-
Bug
-
Resolution: Done
-
P2: Important
-
5.2.0 Beta1
-
None
-
e7fd798af001e2c4e323f5ae90e4e994f12ccf33
Flickering has been observed with this setup:
Configuration: Ubuntu 13.10, i915 stock intel, graphics 3k (i5-2520m)
GL_RENDERER: Mesa DRI Intel(R) Sandybridge Mobile
GL_VERSION: version: 3.0 Mesa 9.2.1
GL_VENDOR: Mesa Project & SGI
Both LIBGL_ALWAYS_SOFTWARE=1 and QSG_RENDER_LOOP=basic|windows fixes the issue, but forcing llvmpipe also introduces issues with context sharing. We can disable ThreadedOpenGL from the platform plugin to force one of the other render loops.