Disable threaded rendering for Intel HD 3000 cards.

Task-number: QTBUG-34492
Change-Id: I1848cde3fb9517679fd54a7170ed5bee40880edc
Reviewed-by: Giuseppe D'Angelo <giuseppe.dangelo@kdab.com>

cregit: e7fd798af001e2c4e323f5ae90e4e994f12ccf33 https://github.com/qt/qtbase/commit/e7fd798af001e2c4e323f5ae90e4e994f12ccf33